Fix header navigation overlap

--- a/docs/stylesheets/_sass/_responsive_layout.sass
+++ b/docs/stylesheets/_sass/_responsive_layout.sass
@@ -192,7 +192,9 @@ html.responsive-html, html.responsive-html body
       margin-left: 0
     .res-content
       margin-right: 0
-
+  &#settings-layout
+    position: relative
+    z-index: 1
 
 /* Medium devices (mobile, 992px and up) */
 @media (max-width: 991px)
